// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea  1`] = `
<div>
  <textarea
    class="textarea"
    disabled=""
    rows="2"
  >
    Initial value
  </textarea>
</div>
`;

exports[`Textarea should render Textarea 1`] = `
<div>
  <textarea
    class="textarea"
    readonly=""
    rows="2"
  >
    Initial value
  </textarea>
</div>
`;

exports[`Textarea should render Textarea with custom className 1`] = `
<div>
  <textarea
    class="textarea custom-class-name"
    readonly=""
    rows="2"
  >
    Initial value
  </textarea>
</div>
`;

exports[`Textarea should render disabled Textarea 1`] = `
<div>
  <textarea
    class="textarea"
    disabled=""
    readonly=""
    rows="2"
  >
    Initial value
  </textarea>
</div>
`;
